some html closing tags fixes

--- a/index.html
+++ b/index.html
@@ -86,10 +86,8 @@
                 <h3>playlist</h3>
                 <a href="#">
                   <div class="playlist-creator">
-                    <a href="#">
-                      <span><i class="fa-solid fa-square-plus"></i></span>
-                      <span>Crea Playlist</span>
-                    </a>
+                    <span><i class="fa-solid fa-square-plus"></i></span>
+                    <span>Crea Playlist</span>
                   </div>
                 </a>
                 <!-- lista elementi playlist -->
@@ -192,9 +190,9 @@
               <!-- box generale contenuti recently played-->
               <div class="recently-box">
                 <!-- colonna contenuti recently played -->
-                <div class="recently columns">
+                <div class="columns">
                   <!-- singola card recently played -->
-                  <div class="recently card">
+                  <div class="card">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Ratione voluptas suscipit iste excepturi quia sunt?
                     Molestiae a facilis modi impedit voluptas error qui ipsam
@@ -202,9 +200,9 @@
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
-                <div class="recently columns">
+                <div class="columns">
                   <!-- singola card recently played -->
-                  <div class="recently card">
+                  <div class="card">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Ratione voluptas suscipit iste excepturi quia sunt?
                     Molestiae a facilis modi impedit voluptas error qui ipsam
@@ -212,9 +210,9 @@
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
-                <div class="recently columns">
+                <div class="columns">
                   <!-- singola card recently played -->
-                  <div class="recently card">
+                  <div class="card">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Ratione voluptas suscipit iste excepturi quia sunt?
                     Molestiae a facilis modi impedit voluptas error qui ipsam
@@ -222,9 +220,9 @@
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
-                <div class="recently columns">
+                <div class="columns">
                   <!-- singola card recently played -->
-                  <div class="recently card">
+                  <div class="card">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Ratione voluptas suscipit iste excepturi quia sunt?
                     Molestiae a facilis modi impedit voluptas error qui ipsam
@@ -232,9 +230,9 @@
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
-                <div class="recently columns">
+                <div class="columns">
                   <!-- singola card recently played -->
-                  <div class="recently card">
+                  <div class="card">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Ratione voluptas suscipit iste excepturi quia sunt?
                     Molestiae a facilis modi impedit voluptas error qui ipsam
@@ -242,9 +240,9 @@
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
-                <div class="recently columns">
+                <div class="columns">
                   <!-- singola card recently played -->
-                  <div class="recently card">
+                  <div class="card">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Ratione voluptas suscipit iste excepturi quia sunt?
                     Molestiae a facilis modi impedit voluptas error qui ipsam
@@ -261,9 +259,9 @@
               <!-- box generale contenuti created for -->
               <div class="created-box">
                 <!-- colonna contenuti created for -->
-                <div class="created columns">
+                <div class="columns">
                   <!-- singola card created for -->
-                  <div class="created card">
+                  <div class="card">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sequi quidem dolore necessitatibus eos. Accusamus
                     consectetur voluptates molestiae quod obcaecati ipsam error
@@ -271,9 +269,9 @@
                   </div>
                 </div>
                 <!-- colonna contenuti created for -->
-                <div class="created columns">
+                <div class="columns">
                   <!-- singola card created for -->
-                  <div class="created card">
+                  <div class="card">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sequi quidem dolore necessitatibus eos. Accusamus
                     consectetur voluptates molestiae quod obcaecati ipsam error
@@ -290,9 +288,9 @@
               <!-- box generale contenuti artisti più popolari -->
               <div class="popular-box">
                 <!-- colonna contenuti artisti più popolari -->
-                <div class="popular columns">
+                <div class="columns">
                   <!-- singola card artisti più popolari -->
-                  <div class="popular card">
+                  <div class="card">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sequi quidem dolore necessitatibus eos. Accusamus
                     consectetur voluptates molestiae quod obcaecati ipsam error
@@ -300,15 +298,14 @@
                   </div>
                 </div>
                 <!-- colonna contenuti artisti più popolari -->
-                <div class="popular columns">
+                <div class="columns">
                   <!-- singola card artisti più popolari -->
-                  <div class="popular card">
+                  <div class="card">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Sequi quidem dolore necessitatibus eos. Accusamus
                     consectetur voluptates molestiae quod obcaecati ipsam error
                     voluptatibus aperiam officiis facere!/div>
                   </div>
-                </div> 
                 </div>
               </div>
             </section>
