sistemate card area principale

--- a/index.html
+++ b/index.html
@@ -193,60 +193,69 @@
                 <div class="columns">
                   <!-- singola card recently played -->
                   <div class="card">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Ratione voluptas suscipit iste excepturi quia sunt?
-                    Molestiae a facilis modi impedit voluptas error qui ipsam
-                    earum.
+                    <img
+                      src="img/metal_lifting.jpg"
+                      alt="immagine compilation metal"
+                    />
+                    <div class="title">Heavy Metal</div>
+                    <div class="subtitle">Subtitle</div>
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
                 <div class="columns">
                   <!-- singola card recently played -->
                   <div class="card">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Ratione voluptas suscipit iste excepturi quia sunt?
-                    Molestiae a facilis modi impedit voluptas error qui ipsam
-                    earum.
+                    <img
+                      src="img/stranger.jpeg"
+                      alt="immagine Stranger Things Vol 1 OST"
+                    />
+                    <div class="title">
+                      Stranger Thins, Vol. 1 (a Netflix Original Series
+                      Soundtrack)
+                    </div>
+                    <div class="subtitle">Kyle Dixon & Michael Stein</div>
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
                 <div class="columns">
                   <!-- singola card recently played -->
                   <div class="card">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Ratione voluptas suscipit iste excepturi quia sunt?
-                    Molestiae a facilis modi impedit voluptas error qui ipsam
-                    earum.
+                    <img
+                      src="img/aquietplace.jpeg"
+                      alt="immagine A quiet place OST"
+                    />
+                    <div class="title">A quiet place</div>
+                    <div class="subtitle">Subtitle</div>
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
                 <div class="columns">
                   <!-- singola card recently played -->
                   <div class="card">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Ratione voluptas suscipit iste excepturi quia sunt?
-                    Molestiae a facilis modi impedit voluptas error qui ipsam
-                    earum.
+                    <img src="img/split.jpeg" alt="immagine Split OST" />
+                    <div class="title">Split</div>
+                    <div class="subtitle">Subtitle</div>
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
                 <div class="columns">
                   <!-- singola card recently played -->
                   <div class="card">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Ratione voluptas suscipit iste excepturi quia sunt?
-                    Molestiae a facilis modi impedit voluptas error qui ipsam
-                    earum.
+                    <img
+                      src="img/cure.jpeg"
+                      alt="immagine A cure for wellness"
+                    />
+                    <div class="title">A cure for wellness</div>
+                    <div class="subtitle">Subtitle</div>
                   </div>
                 </div>
                 <!-- colonna contenuti recently played -->
                 <div class="columns">
                   <!-- singola card recently played -->
                   <div class="card">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Ratione voluptas suscipit iste excepturi quia sunt?
-                    Molestiae a facilis modi impedit voluptas error qui ipsam
-                    earum.
+                    <img src="img/sinister.jpeg" alt="immagine Sinister OST" />
+                    <div class="title">Sinister</div>
+                    <div class="subtitle">Subtitle</div>
                   </div>
                 </div>
               </div>
@@ -260,22 +269,24 @@
               <div class="created-box">
                 <!-- colonna contenuti created for -->
                 <div class="columns">
-                  <!-- singola card created for -->
+                  <!-- singola card recently played -->
                   <div class="card">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Sequi quidem dolore necessitatibus eos. Accusamus
-                    consectetur voluptates molestiae quod obcaecati ipsam error
-                    voluptatibus aperiam officiis facere!/div>
+                    <img
+                      src="img/radar.jpeg"
+                      alt="immagine playlist daily radar"
+                    />
+                    <div class="title">Release Radar</div>
                   </div>
                 </div>
                 <!-- colonna contenuti created for -->
                 <div class="columns">
-                  <!-- singola card created for -->
+                  <!-- singola card recently played -->
                   <div class="card">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Sequi quidem dolore necessitatibus eos. Accusamus
-                    consectetur voluptates molestiae quod obcaecati ipsam error
-                    voluptatibus aperiam officiis facere!/div>
+                    <img
+                      src="img/mixdaily.jpeg"
+                      alt="immagine playlist daily mix"
+                    />
+                    <div class="title">Daily Mix 1</div>
                   </div>
                 </div>
               </div>
@@ -289,22 +300,24 @@
               <div class="popular-box">
                 <!-- colonna contenuti artisti più popolari -->
                 <div class="columns">
-                  <!-- singola card artisti più popolari -->
+                  <!-- singola card recently played -->
                   <div class="card">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Sequi quidem dolore necessitatibus eos. Accusamus
-                    consectetur voluptates molestiae quod obcaecati ipsam error
-                    voluptatibus aperiam officiis facere!/div>
+                    <img
+                      src="img/youg.jpeg"
+                      alt="immagine copertina Lana Del Rey"
+                    />
+                    <div class="title">Lana Del Rey</div>
                   </div>
                 </div>
                 <!-- colonna contenuti artisti più popolari -->
                 <div class="columns">
-                  <!-- singola card artisti più popolari -->
+                  <!-- singola card recently played -->
                   <div class="card">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Sequi quidem dolore necessitatibus eos. Accusamus
-                    consectetur voluptates molestiae quod obcaecati ipsam error
-                    voluptatibus aperiam officiis facere!/div>
+                    <img
+                      src="img/einaudi.jpeg"
+                      alt="immagine Ludovico Einaudi"
+                    />
+                    <div class="title">Ludovico Einaudi</div>
                   </div>
                 </div>
               </div>
