aggiunto hover sulle copertine

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                       src="img/metal_lifting.jpg"
                       alt="immagine compilation metal"
                     />
+                    <i class="fa-regular fa-circle-play"></i>
                     <div class="title">Heavy Metal</div>
                     <div class="subtitle">Subtitle</div>
                   </div>
@@ -209,6 +210,7 @@
                       src="img/stranger.jpeg"
                       alt="immagine Stranger Things Vol 1 OST"
                     />
+                    <i class="fa-regular fa-circle-play"></i>
                     <div class="title">
                       Stranger Thins, Vol. 1 (a Netflix Original Series
                       Soundtrack)
@@ -224,6 +226,7 @@
                       src="img/aquietplace.jpeg"
                       alt="immagine A quiet place OST"
                     />
+                    <i class="fa-regular fa-circle-play"></i>
                     <div class="title">A quiet place</div>
                     <div class="subtitle">Subtitle</div>
                   </div>
@@ -233,6 +236,7 @@
                   <!-- singola card recently played -->
                   <div class="card">
                     <img src="img/split.jpeg" alt="immagine Split OST" />
+                    <i class="fa-regular fa-circle-play"></i>
                     <div class="title">Split</div>
                     <div class="subtitle">Subtitle</div>
                   </div>
@@ -245,6 +249,7 @@
                       src="img/cure.jpeg"
                       alt="immagine A cure for wellness"
                     />
+                    <i class="fa-regular fa-circle-play"></i>
                     <div class="title">A cure for wellness</div>
                     <div class="subtitle">Subtitle</div>
                   </div>
@@ -254,6 +259,7 @@
                   <!-- singola card recently played -->
                   <div class="card">
                     <img src="img/sinister.jpeg" alt="immagine Sinister OST" />
+                    <i class="fa-regular fa-circle-play"></i>
                     <div class="title">Sinister</div>
                     <div class="subtitle">Subtitle</div>
                   </div>
@@ -275,6 +281,7 @@
                       src="img/radar.jpeg"
                       alt="immagine playlist daily radar"
                     />
+                    <i class="fa-regular fa-circle-play"></i>
                     <div class="title">Release Radar</div>
                   </div>
                 </div>
@@ -286,6 +293,7 @@
                       src="img/mixdaily.jpeg"
                       alt="immagine playlist daily mix"
                     />
+                    <i class="fa-regular fa-circle-play"></i>
                     <div class="title">Daily Mix 1</div>
                   </div>
                 </div>
@@ -306,6 +314,7 @@
                       src="img/youg.jpeg"
                       alt="immagine copertina Lana Del Rey"
                     />
+                    <i class="fa-regular fa-circle-play"></i>
                     <div class="title">Lana Del Rey</div>
                   </div>
                 </div>
@@ -317,6 +326,7 @@
                       src="img/einaudi.jpeg"
                       alt="immagine Ludovico Einaudi"
                     />
+                    <i class="fa-regular fa-circle-play"></i>
                     <div class="title">Ludovico Einaudi</div>
                   </div>
                 </div>
