parte sx del footer completa non responsive

--- a/index.html
+++ b/index.html
@@ -345,10 +345,37 @@
 
       <!-- FOOTER -->
       <footer>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-        nesciunt, doloremque quisquam officia ad aliquam magni corporis sapiente
-        modi placeat, voluptatum doloribus, voluptatem porro odit temporibus at
-        earum! Aut, autem?
+        <div class="footer-container">
+          <!-- box generale footer -->
+          <div class="footer-box">
+            <!-- area a sx del footer -->
+            <div class="footer-sinistra">
+              <!-- box contenuto parte sx del footer -->
+              <div class="footer-sx-box">
+                <div class="thumb-art">
+                  <img
+                    src="img/sinister.jpeg"
+                    alt="immagine thumbnail di Sinister"
+                  />
+                </div>
+                <div class="text">
+                  <div class="song-data">
+                    <div class="album">Sinister</div>
+                    <div class="traccia">Brano Nome</div>
+                  </div>
+                </div>
+                <div class="icons">
+                  <i class="far fa-heart"></i>
+                  <i class="far fa-folder"></i>
+                </div>
+              </div>
+            </div>
+            <!-- area al centro del footer -->
+            <div class="footer-centro">centro</div>
+            <!-- area a dx del footer -->
+            <div class="footer-destra">destra</div>
+          </div>
+        </div>
       </footer>
     </div>
   </body>
