hover parte sx del footer

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 <div class="text">
                   <div class="song-data">
                     <div class="album">Sinister</div>
-                    <div class="traccia">Brano Nome</div>
+                    <a href="#">Brano Nome</a>
                   </div>
                 </div>
                 <div class="icons">
