parte centrale footer completata no responsive

--- a/index.html
+++ b/index.html
@@ -371,7 +371,25 @@
               </div>
             </div>
             <!-- area al centro del footer -->
-            <div class="footer-centro">centro</div>
+            <div class="footer-centro">
+              <!-- box contenuto parte centrale del footer -->
+              <div class="footer-mid-box">
+                <div class="media-buttons">
+                  <i class="fa-solid fa-shuffle"></i>
+                  <i class="fa-solid fa-backward-step"></i>
+                  <i id="play" class="fa-regular fa-circle-play"></i>
+                  <i class="fa-solid fa-forward-step"></i>
+                  <i class="fa-solid fa-arrow-rotate-right"></i>
+                </div>
+                <div class="media-progress">
+                  <span>0:25</span>
+                  <div class="meter">
+                    <span class="fill-20-percent"></span>
+                  </div>
+                  <span>4:35</span>
+                </div>
+              </div>
+            </div>
             <!-- area a dx del footer -->
             <div class="footer-destra">destra</div>
           </div>
