contenuto footer completo non proprio responsive

--- a/index.html
+++ b/index.html
@@ -391,7 +391,17 @@
               </div>
             </div>
             <!-- area a dx del footer -->
-            <div class="footer-destra">destra</div>
+            <div class="footer-destra">
+              <!-- box contenuto parte destra del footer -->
+              <div class="footer-dx-box">
+                <i class="fas fa-list"></i>
+                <i class="fa-solid fa-display"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <div class="meter-small">
+                  <div class="fill-percent-small"></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </footer>
