progress bar in tag a

--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
                   </div>
                 </div>
                 <div class="icons">
-                  <i class="far fa-heart"></i>
-                  <i class="far fa-folder"></i>
+                  <a href="#"><i class="far fa-heart"></i></a>
+                  <a href="#"><i class="far fa-folder"></i></a>
                 </div>
               </div>
             </div>
@@ -376,17 +376,21 @@
               <!-- box contenuto parte centrale del footer -->
               <div class="footer-mid-box">
                 <div class="media-buttons">
-                  <i class="fa-solid fa-shuffle"></i>
-                  <i class="fa-solid fa-backward-step"></i>
-                  <i id="play" class="fa-regular fa-circle-play"></i>
-                  <i class="fa-solid fa-forward-step"></i>
-                  <i class="fa-solid fa-arrow-rotate-right"></i>
+                  <a href="#"><i class="fa-solid fa-shuffle"></i></a>
+                  <a href="#"><i class="fa-solid fa-backward-step"></i></a>
+                  <a id="play" href="#"
+                    ><i class="fa-regular fa-circle-play"></i
+                  ></a>
+                  <a href="#"><i class="fa-solid fa-forward-step"></i></a>
+                  <a href="#"><i class="fa-solid fa-arrow-rotate-right"></i></a>
                 </div>
                 <div class="media-progress">
                   <span>0:25</span>
-                  <div class="meter">
-                    <span class="fill-20-percent"></span>
-                  </div>
+                  <a href="#">
+                    <div class="meter">
+                      <span class="fill-20-percent"></span>
+                    </div>
+                  </a>
                   <span>4:35</span>
                 </div>
               </div>
@@ -395,9 +399,9 @@
             <div class="footer-destra">
               <!-- box contenuto parte destra del footer -->
               <div class="footer-dx-box">
-                <i class="fas fa-list"></i>
-                <i class="fa-solid fa-display"></i>
-                <i class="fa-solid fa-volume-high"></i>
+                <a href="#"><i class="fas fa-list"></i></a>
+                <a href="#"><i class="fa-solid fa-display"></i></a>
+                <a href="#"><i class="fa-solid fa-volume-high"></i></a>
                 <div class="meter-small">
                   <div class="fill-percent-small"></div>
                 </div>
