--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <div class="sidebar-top">
                 <div class="logo">
                   <img src="img/logo.svg" alt="logo Spotify grande" />
+                  <!-- logo secondario per schermi piccoli -->
                   <img src="img/logo-small.svg" alt="logo Spotify piccolo" />
                 </div>
               </div>
@@ -371,6 +372,7 @@
                 </div>
               </div>
             </div>
+
             <!-- area al centro del footer -->
             <div class="footer-centro">
               <!-- box contenuto parte centrale del footer -->
@@ -386,15 +388,14 @@
                 </div>
                 <div class="media-progress">
                   <span>0:25</span>
-                  <a href="#">
-                    <div class="meter">
-                      <span class="fill-20-percent"></span>
-                    </div>
-                  </a>
+                  <div class="meter">
+                    <span class="fill-20-percent"></span>
+                  </div>
                   <span>4:35</span>
                 </div>
               </div>
             </div>
+
             <!-- area a dx del footer -->
             <div class="footer-destra">
               <!-- box contenuto parte destra del footer -->
